testdata/baselines/reference/submodule/conformance/jsDeclarationsCommonjsRelativePath.errors.txt
reexport.js(2,23): error TS2307: Cannot find module './thing' or its corresponding type declarations.


==== reexport.js (1 errors) ====
    'use strict';
    const Thing = require('./thing').Thing
                          ~~~~~~~~~
!!! error TS2307: Cannot find module './thing' or its corresponding type declarations.
    module.exports = { Thing }
    
==== thing.js (0 errors) ====
    'use strict';
    class Thing {}
    module.exports = { Thing }
    